fixe navbar on mobile

--- a/my-app/src/components/Navbar/Navbar.css
+++ b/my-app/src/components/Navbar/Navbar.css
@@ -99,7 +99,7 @@
       height: 25vh;
       position: absolute;
       top: 80px;
-      left: 100%;
+      left: -100%;
       opacity: 0.9;
       transition: all 0.5s ease;
     }
@@ -193,7 +193,7 @@
       height: 40vh;
       position: absolute;
       top: 80px;
-      left: 100%;
+      left: -100%;
       opacity: 0.9;
       transition: all 0.5s ease;
     }
